--- a/index.html
+++ b/index.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
-<htm lang="en">
+<html lang="en">
   <head>
-    <title>dostlarim</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
   <body>
-    <table bgcolor="lime" border="0" cellpadding="20"  cellspacing="0" width="500px">
+    <h1>Ozbekistonda tayyorlash onson bolga 4ta tezkor ovqat ritsepti</h1>
+    <table bgcolor="darkorchid" border="2" width="999" align="center">
       <tr>
-        <caption>Davlat Poytaxt va tillar</caption>
+        <td><b>Reja</b></td>
       </tr>
-      <tr bgcolor="#00fff1">  
-        <td>1</td>
-        <td>Ozbekiston</td>
-        <td>Toshkent</td>
-        <td>O'zbek</td>
-      </tr>
-      <tr bgcolor="#eeeeee">
-        <td>2</td>    
-        <td>Italiya</td>
-        <td>Rim</td>
-        <td>Italiyan tili</td>
-      </tr>
-      <tr bgcolor="#aaaaaa">
-        <td>3</td>
-        <td>Yaponiya</td>
-        <td>Tokyo</td>
-        <td>Yapon tili</td>
-      </tr>
-      <tr bgcolor="#eeeeee">
-        <td>4</td>
-        <td>Hindiston</td>
-        <td>Bangladesh</td>
-      <td>Hind tili </td>
+      <tr>
+        <td>
+          <ol>
+            <li>"Domashni"chuchvaralari:</li>
+            <li>"Kiyevcha kotletlar va kartoshka fri":</li>
+            <li>"Mol goshtili":</li>
+            <li>"Kurga goshtili qovurilgan chuchvaralar"</li>
+          </ol>
+        </td>
       </tr>
     </table>
+
+    <table cellpadding="20">
+      <tr bgcolor="	#00ffff" align="center" >
+        <td colspan="2">"Domashni" chuchvaralari</td>
+      </tr>
+
+      <tr>
+        <td><img src="img_8523 (1).jpg" width="500" alt="" /></td>
+        <td>
+          <ul>
+            <li>
+              Ushbu retsept bulonli chuchvaralar ixlosmandlari uchun. Mazali
+              bulon tayyorlash qiyin emas. Kerakli mahsulotlar: 2 o'ram
+              "Kulinar"ning "Domashnie" chuchvaralari; 1ta piyoz; dafna yaprog'i
+              bargi, tuz, ta'bga ko'ra murch.
+            </li>
+          </ul>
+        </td>
+
+        <td></td>
+      </tr>
+    </table>
+    <body></body>
   </body>
 </html>
